<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/firstnameEditText"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:hint="@string/addFirstnameHint"
  android:contentDescription="@string/addFirstnameContentDescription"
/>
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/lastnameEditText"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:hint="@string/addLastnameHint"
  android:contentDescription="@string/addLastnameContentDescription"
/>
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/emailEditText"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:hint="@string/addEmailHint"
  android:contentDescription="@string/addEmailContentDescription"
/>

<Button
    android:id="@+id/buttonSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/buttonSaveLabel" />

<Button
    android:id="@+id/buttonCancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/buttonCancelLabel" />

</LinearLayout>
